--- a/1505/module_2_prep/webguesser.yml
+++ b/1505/module_2_prep/webguesser.yml
@@ -1,4 +1,9 @@
-submissions:
+1507 submissions
+  George Hudson: 
+    repo: https://github.com/Egogre/web_guesser
+    notes: best web_guesser ever! -JC
+
+1505 submissions:
   Sebastian Abondano:
     repo: 
     notes:  
